packages/svelte/tests/compiler-errors/samples/css-global-without-selector/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-css-global-selector',
		message: ':global(...) must contain exactly one selector',
		position: [16, 16]
	}
});
